--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "debug": "node-debug ./bin/www"
   },
   "dependencies": {
-    "express": "~4.12.0",
-    "serve-favicon": "~2.2.0",
-    "morgan": "~1.5.0",
-    "cookie-parser": "~1.3.3",
     "body-parser": "~1.12.0",
+    "cookie-parser": "~1.3.3",
     "debug": "~2.1.0",
-    "ejs": "~2.3.1"
+    "ejs": "~2.3.1",
+    "express": "~4.12.0",
+    "grunt-contrib-jshint": "^0.11.0",
+    "jshint-stylish": "^1.0.1",
+    "morgan": "~1.5.0",
+    "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
