--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "debug": "node-debug ./bin/www"
+    "debug": "node-debug ./bin/www",
+    "test": "grunt jshint"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
