--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-develop": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
     "request": "~2.53.0",
