--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "corbel-composer",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "debug": "node-debug ./bin/www",
-    "test": "grunt jshint"
-  },
-  "dependencies": {
-    "body-parser": "~1.12.0",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.1.0",
-    "ejs": "~2.3.1",
-    "express": "~4.12.0",
-    "grunt-contrib-jshint": "^0.11.0",
-    "jshint-stylish": "^1.0.1",
-    "morgan": "~1.5.0",
-    "serve-favicon": "~2.2.0",
-    "amqplib": "~0.3.1",
-    "cors": "~2.5.3",
-    "uuid": "~2.0.1"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-develop": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "request": "~2.53.0",
-    "time-grunt": "~1.1.0",
-    "load-grunt-tasks": "~3.1.0"
-  }
+    "name": "corbel-composer",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "debug": "node-debug ./bin/www",
+        "test": "grunt jshint",
+        "test:debug": "node-debug $(which grunt) test"
+    },
+    "dependencies": {
+        "body-parser": "~1.12.0",
+        "cookie-parser": "~1.3.3",
+        "debug": "~2.1.0",
+        "ejs": "~2.3.1",
+        "express": "~4.12.0",
+        "grunt-contrib-jshint": "^0.11.0",
+        "jshint-stylish": "^1.0.1",
+        "morgan": "~1.5.0",
+        "serve-favicon": "~2.2.0",
+        "amqplib": "~0.3.1",
+        "cors": "~2.5.3",
+        "uuid": "~2.0.1"
+    },
+    "devDependencies": {
+        "grunt": "~0.4.5",
+        "grunt-cli": "^0.1.13",
+        "grunt-develop": "~0.4.0",
+        "grunt-contrib-watch": "~0.6.1",
+        "request": "~2.53.0",
+        "time-grunt": "~1.1.0",
+        "load-grunt-tasks": "~3.1.0",
+        "mocha": "~2.2.1",
+        "grunt-mocha-test": "~0.12.7"
+    }
 }
