--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
     "name": "corbel-composer",
+    "description": "A corbel composer is a middleware based in nodeJS with express, to offer developers to make his own specific application API.",
     "version": "0.0.1",
-    "private": true,
+    "bin": "bin/www",
+    "license": "Apache-2.0",
+    "keywords": "corbel nodejs express middleware",
+    "authors": [
+        "Rubén Carrasco Fernández <rcarrasco@bq.com>",
+        "Daniel García González <daniel.garcia@bq.com>",
+        "Anthan Pham Trinh <@antaipt>",
+    ],
+    "homepage": "http://opensource.bq.com/corbel-composer",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:bq/corbel-composer.git"
+    },
+    "engines": {
+        "node": ">=0.10.3 <0.12",
+        "npm" : "~2.1.9" 
+    },
     "scripts": {
-        "start": "node ./bin/www",
-        "debug": "node-debug ./bin/www",
-        "test": "grunt jshint",
-        "test:debug": "node-debug $(which grunt) test"
+        "test:debug": "node-debug $(which grunt) test",
+        "start": "node bin/www",
+        "debug": "node-debug bin/www",
+        "test": "grunt jshint"
     },
     "dependencies": {
         "body-parser": "~1.12.0",
@@ -14,12 +31,7 @@
         "debug": "~2.1.0",
         "ejs": "~2.3.1",
         "express": "~4.12.0",
-        "grunt-contrib-jshint": "^0.11.0",
-        "jshint-stylish": "^1.0.1",
-        "morgan": "~1.5.0",
-        "serve-favicon": "~2.2.0",
-        "amqplib": "~0.3.1",
-        "cors": "~2.5.3",
+        "request": "~2.53.0",
         "uuid": "~2.0.1"
     },
     "devDependencies": {
@@ -27,10 +39,11 @@
         "grunt-cli": "^0.1.13",
         "grunt-develop": "~0.4.0",
         "grunt-contrib-watch": "~0.6.1",
-        "request": "~2.53.0",
         "time-grunt": "~1.1.0",
         "load-grunt-tasks": "~3.1.0",
         "mocha": "~2.2.1",
-        "grunt-mocha-test": "~0.12.7"
+        "grunt-mocha-test": "~0.12.7",
+        "grunt-contrib-jshint": "^0.11.0",
+        "jshint-stylish": "^1.0.1"
     }
 }
