bower.json & pacakge.json updated
Change-Id: Ifbd52222ae8f41b3ea60b8a797be8bd37c169f17

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "authors": [
         "Rubén Carrasco Fernández <rcarrasco@bq.com>",
         "Daniel García González <daniel.garcia@bq.com>",
-        "Anthan Pham Trinh <@antaipt>",
+        "Anthan Pham Trinh <@antaipt>"
     ],
     "homepage": "http://opensource.bq.com/corbel-composer",
     "repository": {
