--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "corbel-composer",
     "description": "A corbel composer is a middleware based in nodeJS with express, to offer developers to make his own specific application API.",
     "version": "0.0.1",
-    "bin": "bin/www",
+    "bin": "bin/composer",
     "license": "Apache-2.0",
     "keywords": "corbel nodejs express middleware",
     "authors": [
@@ -17,12 +17,12 @@
     },
     "engines": {
         "node": ">=0.10.3 <0.12",
-        "npm" : "~2.1.9" 
+        "npm": "~2.1.9"
     },
     "scripts": {
         "test:debug": "node-debug $(which grunt) test",
-        "start": "node bin/www",
-        "debug": "node-debug bin/www",
+        "start": "node bin/composer",
+        "debug": "node-debug bin/composer",
         "test": "grunt jshint"
     },
     "dependencies": {
@@ -37,13 +37,14 @@
     "devDependencies": {
         "grunt": "~0.4.5",
         "grunt-cli": "^0.1.13",
-        "grunt-develop": "~0.4.0",
-        "grunt-contrib-watch": "~0.6.1",
-        "time-grunt": "~1.1.0",
-        "load-grunt-tasks": "~3.1.0",
-        "mocha": "~2.2.1",
-        "grunt-mocha-test": "~0.12.7",
         "grunt-contrib-jshint": "^0.11.0",
-        "jshint-stylish": "^1.0.1"
+        "grunt-contrib-watch": "~0.6.1",
+        "grunt-develop": "~0.4.0",
+        "grunt-mocha-test": "~0.12.7",
+        "load-grunt-tasks": "~3.1.0",
+        "jshint-stylish": "^1.0.1",
+        "mocha": "~2.2.1",
+        "chai": "^2.1.1",
+        "time-grunt": "~1.1.0"
     }
 }
