test coverage added
Change-Id: Ife2b72de1164677c5d380a17d1b41e329479506a

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: node_js
 node_js:
   - 0.12
 before_script: npm install
-script: npm test
+script:
+  - grunt test
+  - grunt test:coverage
