--- a/package.json
+++ b/package.json
@@ -1,56 +1,63 @@
 {
-    "name": "corbel-composer",
-    "description": "A corbel composer is a middleware based in nodeJS with express, to offer developers to make his own specific application API.",
-    "version": "0.0.1",
-    "bin": "bin/composer",
-    "license": "Apache-2.0",
-    "keywords": "corbel nodejs express middleware",
-    "authors": [
-        "Rubén Carrasco Fernández <rcarrasco@bq.com>",
-        "Daniel García González <daniel.garcia@bq.com>",
-        "Anthan Pham Trinh <@antaipt>"
-    ],
-    "homepage": "http://opensource.bq.com/corbel-composer",
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:bq/corbel-composer.git"
-    },
-    "engines": {
-        "node": ">=0.10.3 <0.12",
-        "npm": "~2.1.9"
-    },
-    "scripts": {
-        "test:debug": "node-debug $(which grunt) test",
-        "start": "node bin/composer",
-        "debug": "node-debug bin/composer",
-        "test": "grunt jshint"
-    },
-    "dependencies": {
-        "body-parser": "~1.12.0",
-        "cookie-parser": "~1.3.3",
-        "debug": "~2.1.0",
-        "ejs": "~2.3.1",
-        "express": "~4.12.0",
-        "request": "~2.53.0",
-        "uuid": "~2.0.1"
-    },
-    "devDependencies": {
-        "grunt": "~0.4.5",
-        "grunt-blanket": "0.0.8",
-        "grunt-cli": "^0.1.13",
-        "grunt-contrib-clean": "^0.6.0",
-        "grunt-contrib-copy": "^0.8.0",
-        "grunt-contrib-jshint": "^0.11.0",
-        "grunt-contrib-watch": "~0.6.1",
-        "grunt-coveralls": "^1.0.0",
-        "grunt-develop": "~0.4.0",
-        "grunt-mocha-test": "~0.12.7",
-        "load-grunt-tasks": "~3.1.0",
-        "jshint-stylish": "^1.0.1",
-        "mocha": "~2.2.1",
-        "mocha-lcov-reporter": "0.0.2",
-        "chai": "^2.1.1",
-        "time-grunt": "~1.1.0",
-        "travis-cov": "^0.2.5"
-    }
+  "name": "corbel-composer",
+  "description": "A corbel composer is a middleware based in nodeJS with express, to offer developers to make his own specific application API.",
+  "version": "0.0.1",
+  "bin": "bin/composer",
+  "license": "Apache-2.0",
+  "keywords": "corbel nodejs express middleware",
+  "authors": [
+    "Rubén Carrasco Fernández <rcarrasco@bq.com>",
+    "Daniel García González <daniel.garcia@bq.com>",
+    "Anthan Pham Trinh <@antaipt>"
+  ],
+  "homepage": "http://opensource.bq.com/corbel-composer",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:bq/corbel-composer.git"
+  },
+  "engines": {
+    "node": ">=0.10.3 <0.12",
+    "npm": "~2.1.9"
+  },
+  "scripts": {
+    "test:debug": "node-debug $(which grunt) test",
+    "start": "node bin/composer",
+    "debug": "node-debug bin/composer",
+    "test": "grunt jshint"
+  },
+  "dependencies": {
+    "body-parser": "~1.12.0",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.1.0",
+    "ejs": "~2.3.1",
+    "express": "~4.12.0",
+    "request": "~2.53.0",
+    "uuid": "~2.0.1",
+    "es6-promise": "~2.0.1",
+    "node-localstorage": "~0.5.0",
+    "amqplib": "^0.3.2",
+    "serve-favicon": "^2.2.0",
+    "morgan": "^1.5.2",
+    "cors": "^2.5.3",
+    "corbel": "bq/corbel-js#d71756ece3e546d8ec5736f17671a844aaf36fab"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-blanket": "0.0.8",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-coveralls": "^1.0.0",
+    "grunt-develop": "~0.4.0",
+    "grunt-mocha-test": "~0.12.7",
+    "load-grunt-tasks": "~3.1.0",
+    "jshint-stylish": "^1.0.1",
+    "mocha": "~2.2.1",
+    "mocha-lcov-reporter": "0.0.2",
+    "chai": "^2.1.1",
+    "time-grunt": "~1.1.0",
+    "travis-cov": "^0.2.5"
+  }
 }
