--- a/package.json
+++ b/package.json
@@ -32,7 +32,14 @@
         "ejs": "~2.3.1",
         "express": "~4.12.0",
         "request": "~2.53.0",
-        "uuid": "~2.0.1"
+        "uuid": "~2.0.1",
+        "es6-promise": "~2.0.1",
+        "node-localstorage": "~0.5.0",
+        "amqplib": "^0.3.2",
+        "serve-favicon": "^2.2.0",
+        "morgan": "^1.5.2",
+        "cors": "^2.5.3",
+        "corbel": "bq/corbel-js#d71756ece3e546d8ec5736f17671a844aaf36fab"
     },
     "devDependencies": {
         "grunt": "~0.4.5",
