--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "test:debug": "node-debug $(which grunt) test",
         "start": "node bin/composer",
         "debug": "node-debug bin/composer",
+        "clean": "rm -rf node_modules",
         "test": "grunt jshint"
     },
     "dependencies": {
@@ -39,9 +40,10 @@
         "serve-favicon": "^2.2.0",
         "morgan": "^1.5.2",
         "cors": "^2.5.3",
-        "corbel": "bq/corbel-js#d71756ece3e546d8ec5736f17671a844aaf36fab"
+        "corbel": "bq/corbel-js#e4d1e93388cec284108e74714545857eef045250"
     },
     "devDependencies": {
+        "chai": "^2.1.1",
         "grunt": "~0.4.5",
         "grunt-blanket": "0.0.8",
         "grunt-cli": "^0.1.13",
@@ -52,11 +54,10 @@
         "grunt-coveralls": "^1.0.0",
         "grunt-develop": "~0.4.0",
         "grunt-mocha-test": "~0.12.7",
-        "load-grunt-tasks": "~3.1.0",
         "jshint-stylish": "^1.0.1",
+        "load-grunt-tasks": "~3.1.0",
         "mocha": "~2.2.1",
         "mocha-lcov-reporter": "0.0.2",
-        "chai": "^2.1.1",
         "time-grunt": "~1.1.0",
         "travis-cov": "^0.2.5"
     }
