--- a/package.json
+++ b/package.json
@@ -27,20 +27,22 @@
         "test": "grunt jshint"
     },
     "dependencies": {
+        "amqplib": "^0.3.2",
+        "atob": "^1.1.2",
         "body-parser": "~1.12.0",
         "cookie-parser": "~1.3.3",
+        "corbel": "bq/corbel-js#74fd78628aa05c15115a1d3d8c0678c02759172c",
+        "cors": "^2.5.3",
         "debug": "~2.1.0",
         "ejs": "~2.3.1",
-        "express": "~4.12.0",
-        "request": "~2.53.0",
-        "uuid": "~2.0.1",
         "es6-promise": "~2.0.1",
-        "node-localstorage": "~0.5.0",
-        "amqplib": "^0.3.2",
-        "serve-favicon": "^2.2.0",
+        "express": "~4.12.0",
         "morgan": "^1.5.2",
-        "cors": "^2.5.3",
-        "corbel": "bq/corbel-js#e4d1e93388cec284108e74714545857eef045250"
+        "node-localstorage": "~0.5.0",
+        "request": "~2.53.0",
+        "serve-favicon": "^2.2.0",
+        "underscore": "^1.8.2",
+        "uuid": "~2.0.1"
     },
     "devDependencies": {
         "chai": "^2.1.1",
