--- a/src/config/config.json
+++ b/src/config/config.json
@@ -12,10 +12,6 @@
     },
 
     "corbel.driver.options": {
-        "urlBase": "https://{{module}}-int.bqws.io/v1.0/",
-        "resourcesEndpoint": "https://resources-int.bqws.io/v1.0/",
-        "iamEndpoint": "https://iam-int.bqws.io/v1.0/",
-        "evciEndpoint": "https://evci-int.bqws.io/v1.0/",
-        "oauthEndpoint": "https://oauth-int.bqws.io/v1.0/"
+        "urlBase": "https://{{module}}-int.bqws.io/v1.0/"
     }
 }
