--- a/src/config/config.json
+++ b/src/config/config.json
@@ -12,10 +12,6 @@
     },
 
     "corbel.driver.options": {
-        "urlBase": "https://{{module}}.io/v1.0/",
-        "resourcesEndpoint": "https://resources.io/v1.0/",
-        "iamEndpoint": "https://iam.io/v1.0/",
-        "evciEndpoint": "https://evci.io/v1.0/",
-        "oauthEndpoint": "https://oauth.io/v1.0/"
+        "urlBase": "https://{{module}}.io/"
     }
 }
