--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
         "request": "~2.53.0",
         "serve-favicon": "^2.2.0",
         "underscore": "^1.8.2",
-        "uuid": "~2.0.1"
+        "uuid": "~2.0.1",
+        "q": "^1.2.0"
     },
     "devDependencies": {
         "chai": "^2.1.1",
