--- a/src/config/config.json
+++ b/src/config/config.json
@@ -5,6 +5,8 @@
     "rabbitmq.password": "RABBIT_PASSWORD",
     "rabbitmq.reconntimeout": 10000,
 
+    "bootstrap.retrytimeout": 10000,
+
     "corbel.composer.credentials": {
         "clientId": "CLIENT_ID",
         "clientSecret": "CLIENT_SECRET",
