connection tiemout (connect-timeout) phrase execution timeout (tripwire) process error handler added timeout added to config.json
Change-Id: I585cc7b2f58af71e2b0c92fc742c257636b656cc

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -7,6 +7,8 @@
 
     "bootstrap.retrytimeout": 10000,
 
+    "timeout": 2000,
+
     "corbel.composer.credentials": {
         "clientId": "CLIENT_ID",
         "clientSecret": "CLIENT_SECRET",
