--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "amqplib": "^0.3.2",
     "atob": "^1.1.2",
     "body-parser": "~1.12.0",
+    "connect-timeout": "^1.6.1",
     "cookie-parser": "~1.3.3",
     "corbel": "bq/corbel-js#117efaaa99fe3eea9dfa87b0b634025b081eb8ef",
     "cors": "^2.5.3",
@@ -40,7 +41,9 @@
     "morgan": "^1.5.2",
     "node-localstorage": "~0.5.0",
     "request": "~2.53.0",
+    "response-time": "^2.3.0",
     "serve-favicon": "^2.2.0",
+    "tripwire": "^0.10.0",
     "underscore": "^1.8.2",
     "uuid": "~2.0.1",
     "q": "^1.2.0",
