--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "body-parser": "~1.12.0",
     "connect-timeout": "^1.6.1",
     "cookie-parser": "~1.3.3",
-    "corbel": "bq/corbel-js#117efaaa99fe3eea9dfa87b0b634025b081eb8ef",
+    "corbel-js": "0.0.1",
     "cors": "^2.5.3",
     "debug": "~2.1.0",
     "ejs": "~2.3.1",
