--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "q": "^1.2.0",
     "raml-parser": "~0.8.10",
     "yamljs": "~0.2.1",
-    "syntax-error": "~1.1.3"
+    "syntax-error": "~1.1.3",
+    "raml2html": "~1.6.0"
   },
   "devDependencies": {
     "chai": "^2.1.1",
