--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "scripts": {
     "test:debug": "node-debug $(which grunt) test",
-    "start": "node bin/composer",
+    "start": "node node_modules/pm2/bin/pm2 start bin/composer -i max",
+    "stop": "node node_modules/pm2/bin/pm2 stop composer",
+    "restart": "node node_modules/pm2/bin/pm2 restart composer",
     "debug": "node-debug bin/composer",
     "clean": "rm -rf node_modules",
     "test": "grunt test"
@@ -40,9 +42,13 @@
     "express": "~4.12.0",
     "morgan": "^1.5.2",
     "node-localstorage": "~0.5.0",
+    "pm2": "^0.12.14",
+    "q": "^1.2.0",
+    "raml-parser": "~0.8.10",
     "request": "~2.53.0",
     "response-time": "^2.3.0",
     "serve-favicon": "^2.2.0",
+    "syntax-error": "~1.1.3",
     "tripwire": "^0.10.0",
     "underscore": "^1.8.2",
     "uuid": "~2.0.1",
