--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "url": "git@github.com:bq/corbel-composer.git"
   },
   "engines": {
-    "node": ">=0.10.3 <0.12",
+    "node": "0.12.2",
     "npm": "~2.1.9"
   },
   "scripts": {
     "test:debug": "node-debug $(which grunt) test",
-    "start": "node bin/composer",
+    "start": "node node_modules/pm2/bin/pm2 start bin/composer -i max",
+    "stop": "node node_modules/pm2/bin/pm2 stop composer",
+    "restart": "node node_modules/pm2/bin/pm2 restart composer",
     "debug": "node-debug bin/composer",
     "clean": "rm -rf node_modules",
     "test": "grunt test"
@@ -40,7 +42,6 @@
     "express": "~4.12.0",
     "morgan": "^1.5.2",
     "node-localstorage": "~0.5.0",
-    "request": "~2.53.0",
     "response-time": "^2.3.0",
     "serve-favicon": "^2.2.0",
     "tripwire": "^0.10.0",
@@ -50,7 +51,8 @@
     "raml-parser": "~0.8.10",
     "yamljs": "~0.2.1",
     "syntax-error": "~1.1.3",
-    "raml2html": "~1.6.0"
+    "raml2html": "~1.6.0",
+    "pm2": "^0.12.14"
   },
   "devDependencies": {
     "chai": "^2.1.1",
