--- a/package.json
+++ b/package.json
@@ -40,19 +40,19 @@
     "ejs": "~2.3.1",
     "es6-promise": "~2.0.1",
     "express": "~4.12.0",
+    "lodash": "^3.8.0",
     "morgan": "^1.5.2",
     "node-localstorage": "~0.5.0",
-    "response-time": "^2.3.0",
-    "serve-favicon": "^2.2.0",
-    "tripwire": "^0.10.0",
-    "underscore": "^1.8.2",
-    "uuid": "~2.0.1",
+    "pm2": "^0.12.14",
     "q": "^1.2.0",
     "raml-parser": "~0.8.10",
-    "yamljs": "~0.2.1",
-    "syntax-error": "~1.1.3",
     "raml2html": "~1.6.0",
-    "pm2": "^0.12.14"
+    "response-time": "^2.3.0",
+    "serve-favicon": "^2.2.0",
+    "syntax-error": "~1.1.3",
+    "tripwire": "^0.10.0",
+    "uuid": "~2.0.1",
+    "yamljs": "~0.2.1"
   },
   "devDependencies": {
     "chai": "^2.1.1",
