npm run log script added
Change-Id: I5c323a502a35f06d7f059cce310c5d9639190539

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "restart": "node node_modules/pm2/bin/pm2 restart composer",
     "debug": "node-debug bin/composer",
     "clean": "rm -rf node_modules",
+    "logs": "node node_modules/pm2/bin/pm2 logs",
     "test": "grunt test"
   },
   "dependencies": {
