refactor: integration test refactor
Change-Id: Ic718c21b60f476ed93a441fedbd6824a1caaeaf8

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "mocha": "~2.2.1",
     "mocha-lcov-reporter": "0.0.2",
     "request": "^2.53.0",
+    "supertest": "^1.0.0",
     "time-grunt": "~1.1.0",
     "travis-cov": "^0.2.5"
   }
