wip: phrases login client, login user
Change-Id: I22f6128e76789b28c2620290ecac8848b4f7008e

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ public/components
 *.log
 .tmp
 src/config/development.json
+test/fixtures/client/_clientAdmin.json
+test/fixtures/client/_clientDemo.json
+test/fixtures/user/_userDemo.json
