removed only tests target added to gitignore
Change-Id: I9ac820890efd16d88dcbdba21cb879ee8bd0913b

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ src/config/development.json
 test/fixtures/client/_clientAdmin.json
 test/fixtures/client/_clientDemo.json
 test/fixtures/user/_userDemo.json
+target
