--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "syntax-error": "~1.1.3",
     "tripwire": "^0.10.0",
     "uuid": "~2.0.1",
+    "winston": "^1.0.0",
     "yamljs": "~0.2.1"
   },
   "devDependencies": {
