feat: Winston logger and unit test
Change-Id: I36fe684fbf38ed9c16335c12e5ad8a4402b7e639

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -17,5 +17,9 @@
 
     "corbel.driver.options": {
         "urlBase": "https://{{module}}corbel-domain.io/"
-    }
+    },
+
+    "logLevel": "error",
+    "logFile": "logs/composr.log",
+    "syslog" : true
 }
