--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "es6-promise": "~2.0.1",
     "express": "~4.12.0",
     "lodash": "^3.8.0",
+    "mkdirp": "^0.5.1",
     "morgan": "^1.5.2",
     "node-localstorage": "~0.5.0",
     "pm2": "^0.12.14",
