--- a/package.json
+++ b/package.json
@@ -70,10 +70,12 @@
     "grunt-coveralls": "^1.0.0",
     "grunt-develop": "~0.4.0",
     "grunt-express-server": "^0.5.1",
+    "grunt-madge": "0.0.5",
     "grunt-mocha-test": "~0.12.7",
     "grunt-release": "^0.12.0",
     "jshint-stylish": "^1.0.1",
     "load-grunt-tasks": "~3.1.0",
+    "madge": "^0.5.0",
     "mocha": "~2.2.1",
     "mocha-lcov-reporter": "0.0.2",
     "request": "^2.53.0",
