rabbit event name by config
Change-Id: I7d7f2b104ab7b4e9c9e05fa35dac8144ce5e5926

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,6 +4,7 @@
     "rabbitmq.username": "RABBIT_USERNAME",
     "rabbitmq.password": "RABBIT_PASSWORD",
     "rabbitmq.reconntimeout": 10000,
+    "rabbitmq.event": "eventName",
 
     "bootstrap.retrytimeout": 10000,
 
