adding logout and tests for errors : WIP
Change-Id: Ia93ea5d62b94310cc0c5750e795198d1c43daf11

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "authors": [
     "Daniel García González <daniel.garcia@bq.com>",
     "Anthan Pham Trinh <@antaipt>",
+    "Rafael Pedrola <@rafinskipg>",
     "Silkroad Team <silkroad-dev@bq.com>"
   ],
   "homepage": "http://opensource.bq.com/corbel-composer",
