--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "amqplib": "^0.3.2",
+    "ascii-art": "0.0.2-alpha",
     "atob": "^1.1.2",
     "body-parser": "~1.12.0",
     "connect-timeout": "^1.6.1",
