--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ejs": "~2.3.1",
     "es6-promise": "~2.0.1",
     "express": "~4.12.0",
+    "helmet": "^0.9.1",
     "lodash": "^3.8.0",
     "mkdirp": "^0.5.1",
     "morgan": "^1.5.2",
