--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "mkdirp": "^0.5.1",
     "morgan": "^1.5.2",
     "node-localstorage": "~0.5.0",
-    "pm2": "^0.12.14",
+    "pm2": "^0.14.0",
     "q": "^1.2.0",
     "raml-parser": "~0.8.10",
     "raml2html": "~1.6.0",
@@ -60,6 +60,7 @@
     "uuid": "~2.0.1",
     "winston": "^1.0.0",
     "winston-syslog": "^1.1.0",
+    "xregexp": "^2.0.0",
     "yamljs": "~0.2.1"
   },
   "devDependencies": {
