--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cors": "^2.5.3",
     "debug": "~2.1.0",
     "ejs": "~2.3.1",
+    "ejs-locals": "^1.0.2",
     "es6-promise": "~2.0.1",
     "express": "~4.12.0",
     "express-domain-middleware": "^0.1.0",
@@ -50,6 +51,7 @@
     "morgan": "^1.5.2",
     "node-localstorage": "~0.5.0",
     "pm2": "^0.14.0",
+    "pmx": "^0.3.17",
     "q": "^1.2.0",
     "raml-parser": "~0.8.10",
     "raml2html": "~1.6.0",
