--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "corbel-composer",
   "description": "A corbel composer is a middleware based in nodeJS with express, to offer developers to make his own specific application API.",
   "version": "0.0.13",
+  "build.version": "latest",
+  "build.date" : "Mon, 22 Jun 2015 08:24:25 GMT",
   "bin": "bin/composer",
   "license": "Apache-2.0",
   "keywords": "corbel nodejs express middleware",
