add default event name
Change-Id: I7e4eebc8085a2d02916d74e1a60f81c756715c34

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,7 +4,7 @@
     "rabbitmq.username": "RABBIT_USERNAME",
     "rabbitmq.password": "RABBIT_PASSWORD",
     "rabbitmq.reconntimeout": 10000,
-    "rabbitmq.event": "eventName",
+    "rabbitmq.event": "class io.corbel.event.ResourceEvent",
 
     "bootstrap.retrytimeout": 10000,
 
