Add new phrase-related metric
Change-Id: I583ec06820383caab2136dc8018f62dc63e23a5e

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "winston": "^1.0.0",
     "winston-syslog": "^1.1.0",
     "xregexp": "^2.0.0",
-    "yamljs": "~0.2.1"
+    "yamljs": "~0.2.1",
+    "object-sizeof": "1.0.6"
   },
   "devDependencies": {
     "chai": "^2.1.1",
