structure for the core implantantion
Change-Id: I0785adbb540c42955f53e4a2fd6222de6c04f1d6

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -22,5 +22,6 @@
 
     "logLevel": "error",
     "logFile": "logs/composr.log",
-    "syslog" : false
+    "syslog" : false,
+    "bodylimit" : "50mb"
 }
