--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "corbel-composer",
-  "description": "A corbel composer is a middleware based in nodeJS with express, to offer developers to make his own specific application API.",
+  "description": "A corbel composr is a middleware based in nodeJS with express, to offer developers to make his own specific application API.",
   "version": "0.0.21",
   "build.version": "latest",
   "build.date": "Mon, 22 Jun 2015 08:24:25 GMT",
@@ -37,9 +37,10 @@
     "ascii-art": "0.0.2-alpha",
     "atob": "^1.1.2",
     "body-parser": "~1.12.0",
+    "composr-core": "^0.0.4",
     "connect-timeout": "^1.6.1",
     "cookie-parser": "~1.3.3",
-    "corbel-js": "^0.1.0",
+    "corbel-js": "^0.2.0",
     "cors": "^2.5.3",
     "debug": "~2.1.0",
     "ejs": "~2.3.1",
@@ -52,6 +53,7 @@
     "mkdirp": "^0.5.1",
     "morgan": "^1.5.2",
     "node-localstorage": "~0.5.0",
+    "object-sizeof": "1.0.6",
     "pm2": "^0.14.1",
     "pmx": "^0.3.18",
     "q": "^1.2.0",
@@ -59,17 +61,13 @@
     "raml2html": "~1.6.0",
     "response-time": "^2.3.0",
     "serve-favicon": "^2.2.0",
-    "syntax-error": "~1.1.3",
-    "tripwire": "^0.10.0",
     "uuid": "~2.0.1",
     "winston": "^1.0.0",
-    "winston-syslog": "^1.1.0",
-    "xregexp": "^2.0.0",
-    "yamljs": "~0.2.1",
-    "object-sizeof": "1.0.6"
+    "winston-syslog": "^1.1.0"
   },
   "devDependencies": {
     "chai": "^2.1.1",
+    "chai-as-promised": "^5.1.0",
     "grunt": "~0.4.5",
     "grunt-blanket": "0.0.8",
     "grunt-cli": "^0.1.13",
