--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "corbel-composer",
-  "description": "A corbel composer is a middleware based in nodeJS with express, to offer developers to make his own specific application API.",
+  "description": "A corbel composr is a middleware based in nodeJS with express, to offer developers to make his own specific application API.",
   "version": "0.0.21",
   "build.version": "latest",
   "build.date": "Mon, 22 Jun 2015 08:24:25 GMT",
@@ -39,7 +39,7 @@
     "body-parser": "~1.12.0",
     "connect-timeout": "^1.6.1",
     "cookie-parser": "~1.3.3",
-    "corbel-js": "^0.1.0",
+    "corbel-js": "0.2.0",
     "cors": "^2.5.3",
     "debug": "~2.1.0",
     "ejs": "~2.3.1",
