--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "amqplib": "^0.3.2",
     "ascii-art": "0.0.2-alpha",
     "atob": "^1.1.2",
-    "body-parser": "~1.12.0",
-    "composr-core": "^0.0.4",
+    "body-parser": "^1.12.0",
+    "composr-core": "^0.0.9",
     "connect-timeout": "^1.6.1",
     "cookie-parser": "~1.3.3",
-    "corbel-js": "^0.2.2",
+    "corbel-js": "^0.2.4",
     "cors": "^2.5.3",
     "debug": "~2.1.0",
     "ejs": "~2.3.1",
