--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ public/components
 *.log
 .tmp
 src/config/development.json
+src/config/production.json
 test/fixtures/client/_clientAdmin.json
 test/fixtures/client/_clientDemo.json
 test/fixtures/user/_userDemo.json
