--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "test:debug": "node-debug $(which grunt) test",
-    "start": "node node_modules/pm2/bin/pm2 start bin/composer -i max",
+    "start": "node node_modules/pm2/bin/pm2 start bin/composer -i 0 --max-memory-restart 900M",
     "stop": "node node_modules/pm2/bin/pm2 stop composer",
     "restart": "node node_modules/pm2/bin/pm2 restart composer",
     "debug": "node-debug bin/composer",
@@ -37,7 +37,7 @@
     "ascii-art": "0.0.2-alpha",
     "atob": "^1.1.2",
     "body-parser": "^1.12.0",
-    "composr-core": "^0.0.12",
+    "composr-core": "^0.0.15",
     "connect-timeout": "^1.6.1",
     "cookie-parser": "~1.3.3",
     "corbel-js": "^0.2.5",
