--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ public/components
 .tmp
 src/config/development.json
 src/config/production.json
+src/config/staging.json
 test/fixtures/client/_clientAdmin.json
 test/fixtures/client/_clientDemo.json
 test/fixtures/user/_userDemo.json
