reworking docs and adding re-startup mechanism
Change-Id: Ia88d32411d6875b9e797f22e16890e7d83cc3d81

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -10,7 +10,7 @@
 
     "timeout": 2000,
 
-    "corbel.composer.credentials": {
+    "corbel.composr.credentials": {
         "clientId": "CLIENT_ID",
         "clientSecret": "CLIENT_SECRET",
         "scopes": "composr:comp:base"
