--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ public/components
 src/config/development.json
 src/config/staging.json
 src/config/production.json
+src/config/qa.json
 test/fixtures/client/_clientAdmin.json
 test/fixtures/client/_clientDemo.json
 test/fixtures/user/_userDemo.json
