--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "ascii-art": "0.0.2-alpha",
     "atob": "^1.1.2",
     "body-parser": "^1.12.0",
-    "composr-core": "^0.0.21",
+    "composr-core": "^0.0.22",
     "connect-timeout": "^1.6.1",
     "cookie-parser": "~1.3.3",
     "corbel-js": "^0.2.6",
@@ -63,8 +63,7 @@
     "response-time": "^2.3.0",
     "serve-favicon": "^2.2.0",
     "uuid": "~2.0.1",
-    "winston": "^1.0.0",
-    "winston-syslog": "^1.1.0"
+    "winston": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^2.1.1",
