added access log config
Change-Id: I4031eca69465c05ecd7f3a68492359aa38c604cb

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -20,6 +20,8 @@
         "urlBase": "https://{{module}}corbel-domain.io/"
     },
 
+    "accessLog" : true,
+    "accessLogFile" : "logs/access.log",
     "logLevel": "error",
     "logFile": "logs/composr.log",
     "syslog" : false,
