added warn if environment variables are not present and if config file is not overriden
Change-Id: I8d95c55ecd6d166f7f1ed21d3e58029648a1bb58

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -25,5 +25,8 @@
     "logLevel": "error",
     "logFile": "logs/composr.log",
     "syslog" : false,
-    "bodylimit" : "50mb"
+    "bodylimit" : "50mb",
+    "newrelic" : false,
+    "newrelic.name": "",
+    "newrelic.key": ""
 }
