added warn if environment variables are not present and if config file is not overriden
Change-Id: I8d95c55ecd6d166f7f1ed21d3e58029648a1bb58

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -22,7 +22,7 @@
 
     "accessLog" : true,
     "accessLogFile" : "logs/access.log",
-    "logLevel": "error",
+    "logLevel": "warn",
     "logFile": "logs/composr.log",
     "syslog" : false,
     "bodylimit" : "50mb"
