- Added timeout when 'engine.js' does a request to check services state - Refactored some methods - Added documentation for implemented methods - Added properties to config.json, 'process.env' and caught in 'config.js' file, in order to get access to them - Added tests to check conditions: 	- Two services are up for one cycle 	- One service is up for one cycle 	- Two services down for one cycle 	- Two services down for more than one cycle - Changed 'config' to 'initialConfig' in config.js - Solved jshint issues - Fixed tests timeout
Change-Id: I5c116f1a784cf18427b7aa1d13001d200c62a6ac

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -9,7 +9,7 @@
     "bootstrap.retrytimeout": 10000,
 
     "timeout": 2000,
-
+    "services.timeout": 5000, 
     "corbel.composr.credentials": {
         "clientId": "CLIENT_ID",
         "clientSecret": "CLIENT_SECRET",
