--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "madge": "^0.5.0",
     "mocha": "~2.3.3",
     "mocha-lcov-reporter": "1.0.0",
+    "nock": "^2.17.0",
     "request": "^2.53.0",
     "sinon": "^1.14.1",
     "supertest": "^1.0.0",
