add default values for services retries
Change-Id: Ia15afa46a22330ed90f25f4a0d942fc146f1224b

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -10,6 +10,8 @@
 
     "timeout": 2000,
     "services.timeout": 5000, 
+    "services.retries": 30,
+    "services.time": 1000, 
     "corbel.composr.credentials": {
         "clientId": "CLIENT_ID",
         "clientSecret": "CLIENT_SECRET",
