migration from express to restify done
Change-Id: Ia48fcf87dd614d8a98f2aa352f9b4d2fd2813023

--- a/.jshintrc
+++ b/.jshintrc
@@ -19,5 +19,6 @@
     "trailing": true,
     "smarttabs": true,
     "jquery": true,
-    "mocha": true
+    "mocha": true,
+    "loopfunc" : true
 }
