--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "corbel-composr",
-  "description": "A corbel composr is a middleware based in nodeJS with express, to offer developers to make his own specific application API.",
+  "description": "A corbel composr is a middleware based in nodeJS with restify, to offer developers to make his own specific application API.",
   "version": "1.24.2",
   "build.version": "latest",
   "build.date": "Mon, 22 Jun 2015 08:24:25 GMT",
   "bin": "bin/composr",
   "license": "Apache-2.0",
-  "keywords": "corbel nodejs express middleware",
+  "keywords": "corbel nodejs middleware",
   "authors": [
     "Daniel García González <daniel.garcia@bq.com>",
     "Anthan Pham Trinh <@antaipt>",
     "Rafael Pedrola <@rafinskipg>",
     "Silkroad Team <silkroad-dev@bq.com>",
-    "Samuel Martín <@samuelmartingc>"
+    "Samuel Martín <@samuelmartingc>",
+    "Jorge Serrano <@enderlab>"
   ],
   "homepage": "http://opensource.bq.com/corbel-composr",
   "repository": {
@@ -38,17 +39,16 @@
     "ascii-art": "0.0.2-alpha",
     "atob": "^1.1.2",
     "body-parser": "^1.12.0",
-    "composr-core": "^0.0.27",
+    "bunyan": "^1.5.1",
+    "composr-core": "^1.0.7",
     "connect-timeout": "^1.6.1",
     "cookie-parser": "~1.4.0",
-    "corbel-js": "^0.2.13",
+    "corbel-js": "^0.2.17",
     "cors": "^2.5.3",
     "debug": "~2.2.0",
     "ejs": "~2.3.1",
     "ejs-locals": "^1.0.2",
     "es6-promise": "~3.0.2",
-    "express": "~4.13.3",
-    "express-domain-middleware": "^0.1.0",
     "helmet": "^0.14.0",
     "lodash": "^3.8.0",
     "mkdirp": "^0.5.1",
@@ -62,6 +62,7 @@
     "raml-parser": "~0.8.10",
     "raml2html": "~2.1.0",
     "response-time": "^2.3.0",
+    "restify": "^4.0.3",
     "serve-favicon": "^2.2.0",
     "uuid": "~2.0.1",
     "winston": "^2.0.1"
@@ -78,7 +79,6 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-coveralls": "^1.0.0",
     "grunt-develop": "~0.4.0",
-    "grunt-express-server": "^0.5.1",
     "grunt-madge": "0.0.6",
     "grunt-mocha-test": "~0.12.7",
     "grunt-release": "^0.13.0",
