--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "ascii-art": "0.0.2-alpha",
     "atob": "^1.1.2",
     "body-parser": "^1.12.0",
-    "composr-core": "^0.0.27",
+    "bunyan": "^1.5.1",
+    "composr-core": "^1.0.1",
     "connect-timeout": "^1.6.1",
     "cookie-parser": "~1.4.0",
     "corbel-js": "^0.2.13",
@@ -62,6 +63,7 @@
     "raml-parser": "~0.8.10",
     "raml2html": "~2.1.0",
     "response-time": "^2.3.0",
+    "restify": "^4.0.3",
     "serve-favicon": "^2.2.0",
     "uuid": "~2.0.1",
     "winston": "^2.0.1"
