streamer log config value
Change-Id: I074c3acebf30dd26b658ddda7f451611b2229563

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -26,6 +26,7 @@
     "accessLogFile" : "logs/access.log",
     "logLevel": "error",
     "logFile": "logs/composr.log",
+    "logStreamer": "http://localhost:4444",
     "syslog" : false,
     "requestLog" : true,
     "bodylimit" : "50mb",
