--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "response-time": "^2.3.0",
     "restify": "^4.0.3",
     "serve-favicon": "^2.2.0",
+    "socket.io": "^1.3.7",
+    "socket.io-stream": "^0.9.0",
     "uuid": "~2.0.1",
     "winston": "^2.0.1"
   },
