--- a/src/config/config.json
+++ b/src/config/config.json
@@ -26,7 +26,7 @@
     "accessLogFile" : "logs/access.log",
     "logLevel": "error",
     "logFile": "logs/composr.log",
-    "logStreamer": "http://localhost:4444",
+    "logStreamer": "http://localhost:4444/server",
     "syslog" : false,
     "requestLog" : true,
     "bodylimit" : "50mb",
