--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "grunt-madge": "0.0.6",
     "grunt-mocha-test": "~0.12.7",
     "grunt-release": "^0.13.0",
+    "grunt-standard": "^2.0.0",
     "jaguarjs-jsdoc": "0.0.1",
     "jsdoc": "3.3.3",
     "jshint-stylish": "^2.0.1",
