--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "corbel-composr",
-  "description": "A corbel composr is a middleware based in nodeJS with express, to offer developers to make his own specific application API.",
+  "description": "A corbel composr is a middleware based in nodeJS with restify, to offer developers to make his own specific application API.",
   "version": "1.26.0",
-  "build.version": "latest",
-  "build.date": "Mon, 22 Jun 2015 08:24:25 GMT",
   "bin": "bin/composr",
   "license": "Apache-2.0",
   "keywords": "corbel nodejs middleware",
