ignore next json file
Change-Id: If622659cb4eb881a01fa7063adc9bacee28e6947

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ src/config/development.json
 src/config/production.json
 src/config/qa.json
 src/config/staging.json
+src/config/next.json
 test/fixtures/client/_clientAdmin.json
 test/fixtures/client/_clientDemo.json
 test/fixtures/user/_userDemo.json
