--- a/package.json
+++ b/package.json
@@ -42,9 +42,8 @@
     "atob": "^2.0.0",
     "body-parser": "^1.12.0",
     "bunyan": "^1.5.1",
-    "composr-core": "^1.0.8",
+    "composr-core": "^1.0.9",
     "connect-timeout": "^1.6.1",
-    "cookie-parser": "~1.4.0",
     "corbel-js": "^0.2.17",
     "cors": "^2.5.3",
     "debug": "~2.2.0",
@@ -64,6 +63,7 @@
     "raml2html": "~2.1.0",
     "response-time": "^2.3.0",
     "restify": "^4.0.3",
+    "restify-cookies": "^0.2.0",
     "serve-favicon": "^2.2.0",
     "socket.io": "^1.3.7",
     "socket.io-stream": "^0.9.0",
