refactor for metrics!
Change-Id: I13bc388ab7b5feb3944ccab54a4ed7005f3aa9bd

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -28,7 +28,7 @@
         "urlBase": "https://{{module}}corbel-domain.io/"
     },
 
-    "bunyan.requestLog" : true,
+    "bunyan.log" : true,
     "bunyan.stdout": false,
     "bunyan.streamServer": false,
 
@@ -40,6 +40,7 @@
 
     "newrelic" : false,
     "newrelic.name": "",
-    "newrelic.key": ""
+    "newrelic.key": "",
 
+    "keymetrics": true
 }
