--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "atob": "^2.0.0",
     "body-parser": "^1.12.0",
     "bunyan": "^1.5.1",
+    "bunyan-syslog": "^0.3.1",
     "composr-core": "^1.0.12",
     "connect-timeout": "^1.6.1",
     "corbel-js": "^0.2.18",
