--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "body-parser": "^1.12.0",
     "bunyan": "^1.5.1",
     "bunyan-syslog": "^0.3.1",
-    "composr-core": "^1.0.12",
+    "composr-core": "^1.0.13",
     "connect-timeout": "^1.6.1",
-    "corbel-js": "^0.2.18",
+    "corbel-js": "0.2.19",
     "cors": "^2.5.3",
     "debug": "~2.2.0",
     "ejs": "~2.3.1",
@@ -57,7 +57,7 @@
     "newrelic": "^1.23.0",
     "node-localstorage": "~0.6.0",
     "object-sizeof": "1.0.6",
-    "pm2": "^0.15.7",
+    "pm2": "^1.0.0",
     "pmx": "^0.5.5",
     "q": "^1.2.0",
     "raml-parser": "~0.8.10",
