--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "test:debug": "node-debug $(which grunt) test",
-    "start": "node node_modules/pm2/bin/pm2 start bin/composr -i 0 --max-memory-restart 900M",
+    "start": "node node_modules/pm2/bin/pm2 start bin/composr -i 0 --max-memory-restart 900M && npm run logs",
     "stop": "node node_modules/pm2/bin/pm2 stop composr",
     "restart": "node node_modules/pm2/bin/pm2 restart composr",
     "debug": "node-debug bin/composr",
@@ -68,6 +68,7 @@
     "serve-favicon": "^2.2.0",
     "socket.io": "^1.3.7",
     "socket.io-stream": "^0.9.0",
+    "standard":"^5.4.1",
     "uuid": "~2.0.1",
     "winston": "^2.0.1"
   },
