--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
   - 4.2.1
-before_script: npm install -g npm@latest-2; npm install
+before_install: npm install -g npm
 script:
   - grunt test:coverage
