heart beat in config
Change-Id: I800f2c1b65c03002dbd18e4e8a9fa1b3bf79d74a

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -10,6 +10,7 @@
     "rabbitmq.reconntimeout": 10000,
     "rabbitmq.event": "class io.corbel.event.ResourceEvent",
     "rabbitmq.forceconnect": false,
+    "rabbitmq.heartbeat" : 30,
 
     "bootstrap.retrytimeout": 10000,
 
