--- a/package.json
+++ b/package.json
@@ -48,20 +48,17 @@
     "corbel-js": "0.3.7",
     "cors": "^2.5.3",
     "debug": "~2.2.0",
-    "ejs": "~2.3.1",
-    "ejs-locals": "^1.0.2",
     "es6-promise": "~3.0.2",
-    "lodash": "^3.8.0",
+    "lodash": "^4.2.1",
     "mkdirp": "^0.5.1",
     "morgan": "^1.5.2",
     "newrelic": "^1.23.0",
-    "node-localstorage": "~0.6.0",
-    "object-sizeof": "1.0.6",
+    "object-sizeof": "^1.0.8",
     "pm2": "^1.0.0",
-    "pmx": "^0.5.8",
+    "pmx": "^1.0.0",
     "q": "^1.2.0",
     "raml-parser": "~0.8.10",
-    "raml2html": "~2.1.0",
+    "raml2html": "~2.2.0",
     "response-time": "^2.3.0",
     "restify": "^4.0.3",
     "restify-cookies": "^0.2.0",
