fixes path for coverage report
Change-Id: I4b22e01511a7e401ab55f3055d8f4d4f0f1d858a

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,5 @@ env:
 before_install: npm install -g npm
 script:
   - grunt test:coverage
-after_script:
-  - codeclimate-test-reporter < ./tmp/coverage/lcov.info
+  - codeclimate-test-reporter < ./.tmp/coverage/lcov.info
 
