changes due to comments

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "Miguel Jimenez <@milingo>",
     "Josep Arpi <@jarpi>",
     "Samuel Martín <@samuelmartingc>",
-    "Jorge Serrano <@enderlab>"
+    "Jorge Serrano <@enderlab>",
+    "Ricardo Martínez <@rackdon>"
   ],
   "homepage": "http://opensource.bq.com/corbel-composr",
   "repository": {
