adds istanbul and changes codeclimate yml
Change-Id: Ib2a3841f3fb5dfbd84a3c65f07adcb0b6df26c79

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,8 +1,22 @@
-languages:
-   JavaScript: true
+---
+engines:
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - javascript
+  eslint:
+    enabled: true
+  fixme:
+    enabled: true
+ratings:
+  paths:
+  - "**.js"
 exclude_paths:
 - test/**/*
 - node_modules/**/*
+- coverage/**
+- .tmp/**
 - doc/**/*
 - logs/**/*
 - src/config/**/*
