--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ env:
     - CXX=g++-4.8
 before_install: 
   - npm install -g npm
+  - npm install -g istanbul
   - npm install -g codeclimate-test-reporter
-script:
-  - grunt test:coverage
-  - codeclimate-test-reporter < ./.tmp/coverage/lcov.info
+after_script:
+  - istanbul cover node_modules/.bin/_mocha -- -R dot
+  - codeclimate-test-reporter < coverage/lcov.info
