--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "start": "node node_modules/pm2/bin/pm2 start bin/composr -i 0 --max-memory-restart 900M && npm run logs",
     "stop": "node node_modules/pm2/bin/pm2 stop composr",
     "restart": "node node_modules/pm2/bin/pm2 restart composr",
+    "coverage": "istanbul cover node_modules/.bin/_mocha -- -R dot",
     "debug": "node-debug bin/composr",
     "clean": "rm -rf node_modules",
     "logs": "node node_modules/pm2/bin/pm2 logs",
