updated readme and job coveralls
Change-Id: Ia7f7d5f705ba2fb201f532cb0cf387371f4c5068

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,4 @@ before_install:
 after_script:
   - istanbul cover node_modules/.bin/_mocha -- -R dot
   - codeclimate-test-reporter < coverage/lcov.info
+  - grunt coveralls
