--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "body-parser": "^1.12.0",
     "bunyan": "^1.5.1",
     "bunyan-syslog": "^0.3.1",
-    "composr-core": "^1.1.2",
+    "composr-core": "1.2.1",
     "connect-timeout": "^1.6.1",
     "corbel-js": "0.3.7",
     "cors": "^2.5.3",
