- Changes to be compatible with new core - Update documentation endpoint - Test RAML api (pirates) - Publish VirtualDomain integration test
Change-Id: I7d082acc346325f9a79124ec11fb4041d0f85c88

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "pm2": "^1.0.0",
     "pmx": "^0.6.0",
     "q": "^1.2.0",
-    "raml-parser": "~0.8.10",
+    "raml-parser": "~0.8.15",
     "raml2html": "~2.2.0",
     "response-time": "^2.3.0",
     "restify": "^4.0.3",
@@ -83,6 +83,7 @@
     "grunt-mocha-test": "~0.12.7",
     "grunt-release": "^0.13.0",
     "grunt-standard": "^2.0.0",
+    "inquirer": "^0.12.0",
     "jaguarjs-jsdoc": "0.0.1",
     "jsdoc": "3.4.0",
     "load-grunt-tasks": "~3.4.0",
