Adding the new core integration
Change-Id: Ib7bda09337e9a3e5fb7d649311b4308932ca7963

--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     "body-parser": "^1.12.0",
     "bunyan": "^1.5.1",
     "bunyan-syslog": "^0.3.1",
-    "composr-core": "1.2.3",
+    "composr-core": "2.0.0",
     "connect-timeout": "^1.6.1",
-    "corbel-js": "0.3.7",
+    "corbel-js": "0.4.0",
     "cors": "^2.5.3",
     "debug": "~2.2.0",
     "es6-promise": "~3.0.2",
+    "grunt-todos": "^0.3.0",
     "lodash": "^4.2.1",
     "mkdirp": "^0.5.1",
     "morgan": "^1.5.2",
