--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "Samuel Martín <@samuelmartingc>",
     "Jorge Serrano <@enderlab>"
   ],
-  "homepage": "http://opensource.bq.com/corbel-composr",
+  "homepage": "http://corbel-platform.github.io/corbel-composr",
   "repository": {
     "type": "git",
     "url": "git@github.com:corbel-platform/corbel-composr.git"
   },
   "engines": {
-    "node": "4.3.0",
-    "npm": "~3.3.6"
+    "node": "5.10.1",
+    "npm": "~3.8.3"
   },
   "scripts": {
     "test:debug": "node-debug $(which grunt) test",
@@ -98,5 +98,15 @@
     "supertest": "^1.0.0",
     "time-grunt": "~1.3.0",
     "v8-profiler": "^5.2.9"
+  },
+  "standard": {
+    "globals": [
+      "describe",
+      "it",
+      "before",
+      "beforeEach",
+      "after",
+      "afterEach"
+    ]
   }
 }
