--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "corbel-composr",
-  "description": "A corbel composr is a middleware based in nodeJS with restify, to offer developers to make his own specific application API.",
-  "version": "2.3.0",
-  "build.version": "2.0.6",
+  "description": "Composr is a middleware based in nodeJS with restify, to offer developers to make his own specific application API.",
+  "version": "2.4.0",
+  "build.version": "2.4.0",
   "build.date": "Mon, 4 Jan 2016 08:24:25 GMT",
   "bin": "bin/composr",
-  "license": "Apache-2.0",
+  "license": "unlicense",
   "keywords": "corbel nodejs middleware",
   "authors": [
-    "Daniel García González <daniel.garcia@bq.com>",
-    "Anthan Pham Trinh <@antaipt>",
     "Rafael Pedrola <@rafinskipg>",
-    "Silkroad Team <silkroad-dev@bq.com>",
+    "Anthan Pham Trinh <@antaipt>",
+    "Jorge Serrano <@enderlab>",
     "Miguel Jimenez <@milingo>",
     "Josep Arpi <@jarpi>",
     "Samuel Martín <@samuelmartingc>",
-    "Jorge Serrano <@enderlab>"
+    "Daniel García González <daniel.garcia@bq.com>",
+    "Silkroad Team <silkroad-dev@bq.com>"
   ],
   "homepage": "http://corbel-platform.github.io/corbel-composr",
   "repository": {
