--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "es6-promise": "~3.0.2",
     "grunt-todo": "^0.5.0",
     "json-schema-faker": "^0.2.11",
+    "jsonschema": "^1.1.0",
     "lodash": "^4.2.1",
     "mkdirp": "^0.5.1",
     "morgan": "^1.5.2",
