--- a/src/config/config.json
+++ b/src/config/config.json
@@ -8,7 +8,7 @@
     "rabbitmq.username": "RABBIT_USERNAME",
     "rabbitmq.password": "RABBIT_PASSWORD",
     "rabbitmq.reconntimeout": 10000,
-    "rabbitmq.event": "class io.corbel.event.ResourceEvent",
+    "rabbitmq.event": "class com.bq.corbel.event.ResourceEvent",
     "rabbitmq.forceconnect": false,
     "rabbitmq.heartbeat" : 30,
 
