Reworking configuration, and checking some initialization parameters
Change-Id: I8c5721cebfb62862b92997e8b4b34abdb7f33e9d

--- a/.gitignore
+++ b/.gitignore
@@ -4,18 +4,19 @@ public/components
 .sass-cache
 *.log
 .tmp
-src/config/development.json
-src/config/production.json
-src/config/qa.json
-src/config/staging.json
-src/config/test.json
-src/config/next.json
+config/development.json
+config/production.json
+config/qa.json
+config/staging.json
+config/test.json
+config/next.json
 test/fixtures/client/_clientAdmin.json
 test/fixtures/client/_clientDemo.json
 test/fixtures/user/_userDemo.json
-target
-logs/
+targe
+tnologs/
 doc/jsdoc
 .idea
 *.swp
 .DS_Store
+logs
