--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "body-parser": "^1.12.0",
     "bunyan": "^1.5.1",
     "composr-core": "~2.2.0",
+    "config": "^1.21.0",
     "connect-timeout": "^1.6.1",
     "corbel-js": "0.5.0",
     "cors": "^2.5.3",
