fix gitignore and readme
Change-Id: I4ca1f04542c9d40df842fca20b600952b542008d

--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,9 @@ config/next.json
 test/fixtures/client/_clientAdmin.json
 test/fixtures/client/_clientDemo.json
 test/fixtures/user/_userDemo.json
-targe
-tnologs/
+target
+logs/
 doc/jsdoc
 .idea
 *.swp
 .DS_Store
-logs
