--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "mkdirp": "^0.5.1",
     "morgan": "^1.5.2",
     "newrelic": "^1.25.4",
+    "node-redis": "^0.1.7",
     "object-sizeof": "^1.0.8",
     "pm2": "^1.1.3",
     "pmx": "^0.6.0",
