--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "mkdirp": "^0.5.1",
     "morgan": "^1.5.2",
     "newrelic": "^1.25.4",
-    "node-redis": "^0.1.7",
     "object-sizeof": "^1.0.8",
     "pm2": "^1.1.3",
     "pmx": "^0.6.0",
@@ -67,6 +66,7 @@
     "raml-sanitize": "^1.1.2",
     "raml-validate": "^1.0.6",
     "raml2html": "~2.2.0",
+    "redis": "^2.6.2",
     "response-time": "^2.3.0",
     "restify": "^4.0.3",
     "restify-cookies": "^0.2.0",
