--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "composr-core": "~2.2.0",
     "config": "^1.21.0",
     "connect-timeout": "^1.6.1",
-    "corbel-js": "0.5.0",
+    "corbel-js": "~0.6.0",
     "cors": "^2.5.3",
     "debug": "~2.2.0",
     "es6-promise": "~3.0.2",
