add redis server to travis
Change-Id: I5a260c803e8f670c0afb27e2162b58eefcf7ef54

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ addons:
 env:
   global:
     - CXX=g++-4.8
+services:
+  - redis-server
 before_install: 
   - npm install -g npm
   - npm install -g istanbul
