Code climate repo token
Change-Id: I8381736425c8d9dc167ce2b7ee61b5d3517624fa

--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "Daniel García González <daniel.garcia@bq.com>",
     "Silkroad Team <silkroad-dev@bq.com>"
   ],
-  "homepage": "http://corbel-platform.github.io/corbel-composr",
+  "homepage": "http://bq.github.io/corbel-composr",
   "repository": {
     "type": "git",
-    "url": "git@github.com:corbel-platform/corbel-composr.git"
+    "url": "git@github.com:bq/corbel-composr.git"
   },
   "engines": {
     "node": "5.10.1",
